--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,8 +1,102 @@
 .contact {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 2rem;
+    width: 60%;
+    margin: 0 auto;
+    opacity: 0;
+    transform: translateY(50px);
+    transition: opacity 1s ease, transform 1s ease;
+}
 
+.contact.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.contact.hidden {
+    opacity: 0;
+    transform: translateY(50px);
 }
 
 .contact h2 {
-  text-align: center;
-  margin: 1rem 0;
+    text-align: center;
+    margin: 1rem 0;
+}
+
+.contact-content {
+    background-color: white;
+    border-radius: 15px;
+    padding: 2rem;
+}
+
+.contact-content:hover {
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+}
+
+.contact-content div {
+    display: flex;
+    gap: 2rem;
+    margin: 20px 0;
+}
+
+.contact-content div svg {
+    width: 24px;
+    height: 24px;
+}
+
+.contact-content div p, .contact-content div a {
+    font-family: 'Inter', 'Courier New', Courier, monospace;
+    font-size: 1rem;
+    color: #333;
+    margin: 0;
+    align-self: center;
+    text-decoration: none;
+    position: relative;
+    cursor: pointer;
+}
+
+
+
+.contact-content div a::before {
+    content: "Open in new tab";
+    width: max-content;
+    position: absolute;
+    transform: translate(-50%, -200%);
+    transition: .2s;
+    opacity: 0;
+    left: 50%;
+    top: 0;
+    color: white;
+    background-color: #1193d4;
+    border-radius: 15px;
+    padding: 5px 10px;
+    pointer-events: none;
+}
+
+.contact-content div a:hover::before {
+    opacity: 1;
+    transform: translate(-50%, -100%);
+}
+
+.contact-content div p::before {
+    content: "Copy";
+    width: max-content;
+    position: absolute;
+    transform: translate(-50%, -200%);
+    transition: .2s;
+    opacity: 0;
+    left: 50%;
+    top: 0;
+    color: white;
+    background-color: #1193d4;
+    border-radius: 15px;
+    padding: 5px 10px;
+    pointer-events: none;
+}
+
+.contact-content div p:hover::before {
+    opacity: 1;
+    transform: translate(-50%, -100%);
 }
