--- a/src/components/Features/Features.css
+++ b/src/components/Features/Features.css
@@ -1,62 +1,62 @@
 .features {
-  padding: 2vh 2vw;
-  opacity: 0;
-  transform: translateY(50px);
-  transition: opacity 0.8s ease, transform 0.8s ease;
+    padding: 2vh 2vw;
+    opacity: 0;
+    transform: translateY(50px);
+    transition: opacity 0.8s ease, transform 0.8s ease;
 }
 
 .features.visible {
-  opacity: 1;
-  transform: translateY(0);
+    opacity: 1;
+    transform: translateY(0);
 }
 
 .features.hidden {
-  opacity: 0;
-  transform: translateY(50px);
+    opacity: 0;
+    transform: translateY(50px);
 }
 
 /* le reste de ton CSS inchangé */
 .features h2 {
-  text-align: center;
-  margin: 1rem 0;
-  color: #0F172A;
-  font-family: 'Inter', 'Courier New', Courier, monospace;
+    text-align: center;
+    margin: 1rem 0;
+    color: #0f172a;
+    font-family: 'Inter', 'Courier New', Courier, monospace;
 }
 
 .features-table {
-  width: 80%;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    width: 80%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
 .feature-item {
-  background-color: white;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  width: 100%;
-  max-width: 150px;
-  border-radius: 10px;
-  padding: 0.5rem 3rem;
-  margin: 1rem auto;
-  transition: box-shadow 0.3s ease;
+    background-color: white;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    max-width: 150px;
+    border-radius: 10px;
+    padding: 0.5rem 3rem;
+    margin: 1rem auto;
+    transition: box-shadow 0.3s ease;
 }
 
 .feature-item:hover {
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
 }
 
 .feature-item svg {
-  width: 30px;
-  height: 30px;
-  margin-right: 1rem;
+    width: 30px;
+    height: 30px;
+    margin-right: 1rem;
 }
 
 .feature-item p {
-  color: rgb(15 23 42);
-  font-family: 'Inter', 'Courier New', Courier, monospace;
-  font-size: 0.875rem;
-  font-weight: 700;
-  margin: 0;
+    color: rgb(15 23 42);
+    font-family: 'Inter', 'Courier New', Courier, monospace;
+    font-size: 0.875rem;
+    font-weight: 700;
+    margin: 0;
 }
