--- a/src/components/More/More.css
+++ b/src/components/More/More.css
@@ -1,8 +1,46 @@
 .more {
+    position: relative;
+    width: 70%;
+    margin: 0 auto;
+    opacity: 0;
+    transform: translateY(50px);
+    transition: opacity 1s ease, transform 1s ease;
+}
 
+.more.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.more.hidden {
+    opacity: 0;
+    transform: translateY(50px);
 }
 
 .more h2 {
-  text-align: center;
-  margin: 1rem 0;
+    text-align: center;
+    margin: 1rem 0;
+}
+
+.more-content {
+    display: flex;
+    align-items: center;
+    padding: 0 1rem;
+    background-color: rgb(255, 255, 255);
+    border-radius: 15px;
+    padding: 2rem;
+    transition: .2s;
+}
+
+.more-content:hover {
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
+}
+
+.more-content img {
+    width: 40%;
+}
+
+.more-content p {
+    width: 60%;
+    font-family: 'Inter', 'Courier New', Courier, monospace;
 }
