--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -100,3 +100,11 @@
     transform: translate(-50%, -100%);
     transition: .2s;
 }
+
+@media (max-width: 800px) {
+    .contact {
+        width: 90%;
+        margin: 0;
+        padding: 0 5%;
+    }
+}
